@@ -17,11 +17,9 @@
 package com.twitter.logging
 
 import com.twitter.util.TwitterDateFormat
-
 import java.text.{MessageFormat, DateFormat}
 import java.util.regex.Pattern
 import java.util.{Date, GregorianCalendar, TimeZone, logging => javalog}
-
 import scala.collection.mutable
 
 private[logging] object Formatter {
