@@ -25,6 +25,9 @@ New Features:
   * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
     ``RB_ID=832816``
 
+  * util-core: `c.t.util.NoStacktrace` is removed. Use `scala.util.control.NoStackTrace` instead.
+    ``RB_ID=833188``
+
   * util-app: `com.twitter.finagle.util.LoadService` has been moved to
     `c.t.app.LoadService` and can now be used without needing a finagle-core
     dependency. ``RB_ID=829897``
